<resources>
    <string name="app_name">AssistMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="guide">GUIDES</string>
    <string name="news">NEWS</string>
    <string name="chat">CHAT</string>
    <string name="info">INFO</string>
    <string name="ResourceGuideSearchGuide">Search guide</string>
    <string name="ResourceLoginUsername">Username</string>
    <string name="ResourceLoginPassword">Password</string>
    <string name="ResourceLoginLogin">Login</string>
    <string name="ResourceMainRegister">REGISTER</string>
    <string name="ResourceMainAlreadyRegister">ALREADY REGISTERED?</string>
    <string name="ResourceMainGuestLogin">ENTER AS A GUEST</string>
    <string name="ResourceRegisterName">Name</string>
    <string name="ResourceRegisterSurname">Surname</string>
    <string name="ResourceRegisterRepeatPassword">Repeat password</string>
    <string name="ResourceRegisterCountry">Country</string>
    <string name="ResourceChatSend">Send</string>
    <string name="ResourceChatTypeMessage">Type a message</string>
    <string name="ResourceProfileNewPassword">New password</string>
    <string name="ResourceProfileCurrentPassword">Current Password</string>
    <string name="ResourceProfileRepeatNewPassword">Repeat the new password</string>
    <string name="ResourceProfileEditProfile">Edit profile</string>
    <string name="ResourceProfileChangePassword">Change password</string>
    <string name="ResourceLoginPopUpMessage">YOU NEED TO BE REGISTERED AND LOGGED IN FOR THIS FEATURE.</string>
    <string name="ResourceSettingsLanguage">Language</string>
    <string name="ResourceSettingsChangeLanguage">Change app language</string>
    <string name="ResourceSettingsChangeLnaguageDescription">Changes the language of the text shown on the screen</string>
    <string name="ResourceSettingsSystem">System</string>
    <string name="ResourceSettingsNotifications">Show notifications</string>
    <string name="ResourceSettingsNotificationsDescription">Choose either you want the app to show push\\notifications or not</string>
    <string name="country_prompt">Choose a language</string>

    <string name="download">Download</string>

    <string name="phone_numbers">PHONE NUMBERS</string>
    <string name="general_emergencies">General Emergencies</string>
    <string name="medical_emergencies">Medical Emergencies</string>
    <string name="fire_service">Fire Service</string>
    <string name="saier">Service Centre For Immigrants, Emigrants and Refugees (SAIER)</string>
    <string name="web_pages">WEB PAGES</string>
    <string name="new_citizens">New Citizens information portal</string>
    <string name="cear">Spanish Commission for Refugee Aid (CEAR)</string>
    <string name="mossos">Mossos d\'Esquadra (Catalan police force)</string>
    <string name="health">Health Information, procedures and services of the Goverment of Catalonia</string>

    <string name="map">MAP</string>
    <string name="translate">TRANSLATE</string>
    <string name="go_map">GO TO MAP</string>

    <string name="send">SEND</string>
    <string name="send_request">SEND CHAT REQUEST</string>
    <string name="close_chat_message">Are you sure you want to finish the chat? The conversation will be deleted.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="question_chat">How can we help you?</string>

    <string name="accept">ACCEPT</string>
    <string name="cancel_request_chat">CANCEL REQUEST</string>
    <string name="chat_open">You have already sent a request.</string>

    <string-array name="country_arrays">
        <item>English</item>
        <item>Catalan</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
    </string-array>

    <string-array name="country_names">
        <item>Select your country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Canary Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Ceuta and Melilla</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo [DRC]</item>
        <item>Congo [Republic]</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Côte d’Ivoire</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Europe</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latin America</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia [FYROM]</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar [Burma]</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Réunion</item>
        <item>Saint Barthélemy</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>São Tomé and Príncipe</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turks and Caicos Islands</item>
        <item>U.S. Outlying Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>

</resources>
